Fixed mobile menu visibility issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,3 @@
-article.container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  justify-content: space-between;
-}
-
 main {
   flex: 1;
   display: flex;
